--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "marked": "^0.8.2",
     "next": "^9.4.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "bcrypt": "^5.0.0",
+    "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.2",
+    "swr": "^0.1.16",
+    "unfetch": "^4.1.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "raw-loader": "^4.0.1"
